# dpdk

./: .editorconfig  .gitignore  .mailmap  .travis.yml  AGENTS.md  BUILD.bazel  CRITICAL-02_DEEP_ANALYSIS.md  CRITICAL-02_SUMMARY.md  Dockerfile  FINAL_SECURITY_REPORT.md  GNUmakefile  MAINTAINERS  MODULE.bazel  Makefile  README_SECURITY_ANALYSIS.md  SECURITY_ANALYSIS.md  VERIFIED_CVE_REPORT.md  VERSION  meson.build  meson_options.txt  vhostd.md
app/: Makefile  meson.build
app/chkincs/: Makefile  test.c  test.h  test_alarm.c  test_atomic.c  test_branch_prediction.c  test_byteorder.c  test_common.c  test_cpuflags.c  test_cycles.c  test_debug.c  test_eal.c  test_errno.c  test_ethdev.c  test_ether.c  test_fbk_hash.c  test_hash.c  test_hash_crc.c  test_interrupts.c  test_ip.c  test_jhash.c  test_launch.c  test_lcore.c  test_log.c  test_lpm.c  test_malloc.c  test_mbuf.c  test_memcpy.c  test_memory.c  test_mempool.c  test_memzone.c  test_pci.c  test_pci_dev_ids.c  test_per_lcore.c  test_prefetch.c  test_random.c  test_ring.c  test_rwlock.c  test_sctp.c  test_spinlock.c  (+6 more)
app/cmdline_test/: Makefile  cmdline_test.c  cmdline_test.h  cmdline_test.py  cmdline_test_data.py  commands.c
app/dump_cfg/: Makefile  dump_cfg_main.c  main.c  main.h
app/dumpcap/: main.c  meson.build
app/graph/: cli.c  commands.list  conn.c  ethdev.c  ethdev.h  ethdev_priv.h  ethdev_rx.c  ethdev_rx.h  ethdev_rx_priv.h  feature.c  feature.h  graph.c  graph.h  graph_priv.h  ip4_output_hook.c  ip4_route.c  ip6_route.c  l2fwd.c  l2fwd.h  l3fwd.c  main.c  mempool.c  mempool.h  mempool_priv.h  meson.build  module_api.h  neigh.c  neigh.h  neigh_priv.h  route.h  route_priv.h  utils.c
app/pdump/: Makefile  main.c  meson.build
app/proc-info/: main.c  meson.build
app/proc_info/: Makefile  main.c
app/sniffer/: main.c
app/test-acl/: Makefile  main.c  main.h  meson.build  test-acl.sh
app/test-bbdev/: Makefile  main.c  main.h  meson.build  test-bbdev.py  test_bbdev.c  test_bbdev_perf.c  test_bbdev_vector.c  test_bbdev_vector.h
app/test-cmdline/: cmdline_test.c  cmdline_test.py  commands.c  meson.build
app/test-compress-perf/: Makefile  comp_perf_options.h  comp_perf_options_parse.c  comp_perf_test_benchmark.c  comp_perf_test_benchmark.h  comp_perf_test_common.c  comp_perf_test_common.h  comp_perf_test_cyclecount.c  comp_perf_test_throughput.c  comp_perf_test_verify.c  comp_perf_test_verify.h  main.c  meson.build
app/test-crypto-perf/: Makefile  cperf.h  cperf_ops.c  cperf_ops.h  cperf_options.h  cperf_options_parsing.c  cperf_test_common.c  cperf_test_common.h  cperf_test_latency.c  cperf_test_latency.h  cperf_test_pmd_cyclecount.c  cperf_test_pmd_cyclecount.h  cperf_test_throughput.c  cperf_test_throughput.h  cperf_test_vector_parsing.c  cperf_test_vectors.c  cperf_test_vectors.h  cperf_test_verify.c  cperf_test_verify.h  cperf_verify_parser.c  dpdk-graph-crypto-perf.py  main.c  meson.build
app/test-dma-perf/: benchmark.c  config.ini  main.c  main.h  meson.build
app/test-eventdev/: Makefile  evt_common.h  evt_main.c  evt_options.c  evt_options.h  evt_test.c  evt_test.h  meson.build  parser.c  parser.h  test_atomic_atq.c  test_atomic_common.c  test_atomic_common.h  test_atomic_queue.c  test_order_atq.c  test_order_common.c  test_order_common.h  test_order_queue.c  test_perf_atq.c  test_perf_common.c  test_perf_common.h  test_perf_queue.c  test_pipeline_atq.c  test_pipeline_common.c  test_pipeline_common.h  test_pipeline_queue.c
app/test-fib/: Makefile  main.c  meson.build
app/test-flow-perf/: Makefile  actions_gen.c  actions_gen.h  async_flow.c  async_flow.h  config.h  flow_gen.c  flow_gen.h  items_gen.c  items_gen.h  main.c  meson.build
app/test-gpudev/: main.c
app/test-mldev/: meson.build  ml_common.h  ml_main.c  ml_options.c  ml_options.h  parser.c  parser.h  test_common.c  test_common.h  test_device_ops.c  test_device_ops.h  (+8 more)
bazel/: BUILD.bazel  deps.bzl  numactl.BUILD  requirements.in  requirements.txt
buildtools/: auto-config-h.sh  binutils-avx512-check.py  call-sphinx-build.py  check-dts-requirements.py  check-experimental-syms.sh  check-symbols.sh  dpdk-cmdline-gen.py  gen-build-mk.sh  gen-header.py  gen-pmdinfo-cfile.py  gen-pmdinfo-cfile.sh  gen-version-map.py  get-min-meson-version.py  get-test-suites.py  group-libs.sh  list-dir-globs.py  map-list-symbol.sh  map_to_win.py  meson.build  options-ibverbs-static.sh  pmdinfogen.py  symlink-drivers-solibs.sh  update-abi.sh  update_version_map_abi.py
config/: common_armv8a_linux  common_armv8a_linuxapp  common_base  common_bsdapp  common_linux  common_linuxapp  defconfig_arm-armv7a-linuxapp-gcc  defconfig_arm64-armada-linuxapp-gcc  defconfig_arm64-armv8a-linuxapp-clang  defconfig_arm64-armv8a-linuxapp-gcc  defconfig_arm64-bluefield-linuxapp-gcc  defconfig_arm64-dpaa-linuxapp-gcc  defconfig_arm64-dpaa2-linux-gcc  defconfig_arm64-dpaa2-linuxapp-gcc  defconfig_arm64-emag-linuxapp-gcc  defconfig_arm64-octeontx2-linuxapp-gcc  defconfig_arm64-stingray-linuxapp-gcc  defconfig_arm64-thunderx-linuxapp-gcc  defconfig_arm64-thunderx2-linuxapp-gcc  defconfig_arm64-xgene1-linuxapp-gcc  defconfig_i686-default-linuxapp-gcc  defconfig_i686-default-linuxapp-icc  defconfig_i686-native-linuxapp-gcc  defconfig_i686-native-linuxapp-icc  defconfig_ppc_64-power8-linuxapp-gcc  defconfig_tile-tilegx-linuxapp-gcc  defconfig_x86_64-default-bsdapp-gcc  defconfig_x86_64-default-linuxapp-gcc  defconfig_x86_64-default-linuxapp-icc  defconfig_x86_64-ivshmem-linuxapp-gcc  defconfig_x86_64-ivshmem-linuxapp-icc  defconfig_x86_64-native-bsdapp-clang  defconfig_x86_64-native-bsdapp-gcc  defconfig_x86_64-native-linuxapp-clang  defconfig_x86_64-native-linuxapp-gcc  defconfig_x86_64-native-linuxapp-icc  defconfig_x86_x32-native-linuxapp-gcc  meson.build  rte_build_config.h  rte_config.h
drivers/: Makefile  meson.build  version.map
dts/: .gitignore  Dockerfile  README.md  conf.yaml  main.py  nodes.example.yaml  pyproject.toml  test_run.example.yaml  test_runs.example.yaml  tests_config.example.yaml
examples/: Makefile  meson.build
lib/: Makefile  meson.build
(+9801 files in other folders)
