option('allow_invalid_socket_id', type: 'boolean', value: false,
	description: 'allow out-of-range NUMA socket id\'s for platforms that don\'t report the value correctly')
option('enable_kmods', type: 'boolean', value: true,
	description: 'build kernel modules')
option('examples', type: 'string', value: '',
	description: 'Comma-separated list of examples to build by default')
option('include_subdir_arch', type: 'string', value: '',
	description: 'subdirectory where to install arch-dependent headers')
option('kernel_dir', type: 'string', value: '',
	description: 'path to the kernel for building kernel modules')
option('lib_musdk_dir', type: 'string', value: '',
	description: 'path to the MUSDK library installation directory')
option('machine', type: 'string', value: 'native',
	description: 'set the target machine type')
option('max_lcores', type: 'string', value: '128',
	description: 'maximum number of cores/threads supported by EAL')
option('max_numa_nodes', type: 'string', value: '4',
	description: 'maximum number of NUMA nodes supported by EAL')
option('per_library_versions', type: 'boolean', value: true,
	description: 'true: each lib gets its own version number, false: DPDK version used for each lib')
option('use_hpet', type: 'boolean', value: false,
	description: 'use HPET timer in EAL')
option('tests', type: 'boolean', value: true,
	description: 'build unit tests')
